# Chapito

./: .gitignore  CHANGELOG.md  README.md  TODO.md  config.ini  config.ini.sample  main.py  pyproject.toml
assets/: Applio.ipynb
chapito/: anthropic_chat.py  config.py  deepseek_chat.py  duckduckgo_chat.py  gemini_chat.py  grok_chat.py  mistral_chat.py  openai_chat.py  perplexity_chat.py  proxy.py  types.py
chapito/tools/: log.py  tools.py
proxy_chat/: config.py  grok_chat.py  mistral_chat.py  proxy.py
proxy_chat/tools/: tools.py
tests/: test_anthropic.py  test_config.py
